--- a/src/main/resources/templates/deleteAppointment.html
+++ b/src/main/resources/templates/deleteAppointment.html
@@ -24,30 +24,33 @@
 				App</span>
 		</div>
 		<ul class="nav-links">
-			<li><a th:href="@{/receptionist}" class="active"> <i class='bx bx-grid-alt'></i>
+			<li><a th:href="@{/receptionist}"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
 			</a></li>
-			<li><a th:href="@{/receptionist/deleteAppointment}"> <i class='bx bx-box'></i> <span
+			<li><a th:href="@{/receptionist/deleteAppointment}"
+				class="active"> <i class='bx bx-box'></i> <span
 					class="links_name">Delete </span>
 			</a></li>
-			<li><a th:href="@{/receptionist/updateAppointment}"> <i class='bx bx-list-ul'></i> <span
-					class="links_name">Reschedule </span>
+			<li><a th:href="@{/receptionist/updateAppointment}"> <i
+					class='bx bx-list-ul'></i> <span class="links_name">Reschedule
+				</span>
 			</a></li>
-			<li><a th:href="@{/receptionist}"> <i class='bx bx-pie-chart-alt-2'></i> <span
-					class="links_name"> Print Receipt</span>
+			<li><a th:href="@{/receptionist}"> <i
+					class='bx bx-pie-chart-alt-2'></i> <span class="links_name">
+						Print Receipt</span>
 			</a></li>
-			<li><a th:href="@{/receptionist/updateSpecialization}"> <i class='bx bx-coin-stack'></i> <span
-					class="links_name">Specialization</span>
+			<li><a th:href="@{/receptionist/updateSpecialization}"> <i
+					class='bx bx-coin-stack'></i> <span class="links_name">Specialization</span>
 			</a></li>
-			<li><a th:href="@{/receptionist/patientPrescription}"> <i class='bx bx-book-alt'></i> <span
-					class="links_name">Prescriptions</span>
+			<li><a th:href="@{/receptionist/patientPrescription}"> <i
+					class='bx bx-book-alt'></i> <span class="links_name">Prescriptions</span>
 			</a></li>
 			<li><a href="@{/receptionist}"> <i class='bx bx-user'></i> <span
 					class="links_name">Delayed</span>
-			 </a></li>
-			<li><a href="@{/receptionist/appointmentPerDoctor}"> <i class='bx bx-cog'></i> <span
-					class="links_name">AppointmentperDoctor</span>
-			</a></li> 
+			</a></li>
+			<li><a href="@{/receptionist/appointmentPerDoctor}"> <i
+					class='bx bx-cog'></i> <span class="links_name">AppointmentperDoctor</span>
+			</a></li>
 			<li class="log_out"><button
 					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
 					class="links_name" onclick="logout()">Log out</button> <i
@@ -57,11 +60,8 @@
 	<section class="home-section">
 		<nav>
 			<div class="sidebar-button">
-				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Dashboard</span>
-			</div>
-			<div class="search-box">
-				<input type="text" placeholder="Search..."> <i
-					class='bx bx-search'></i>
+				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Delete
+					Appointment</span>
 			</div>
 			<div class="profile-details">
 				<img src="images/profile.jpg" alt=""> <span class="admin_name">Receptionist</span>
@@ -70,44 +70,9 @@
 		</nav>
 
 		<div class="home-content">
-			<div class="overview-boxes">
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Users</div>
-						<div class="number">40,876</div>
-						<div class="indicator"></div>
-					</div>
 
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Doctors</div>
-						<div class="number">38,876</div>
-						<div class="indicator"></div>
-					</div>
-
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Fees Received</div>
-						<div class="number">$12,876</div>
-						<div class="indicator"></div>
-					</div>
-
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Fees Pending</div>
-						<div class="number">11,086</div>
-						<div class="indicator"></div>
-					</div>
-
-				</div>
-			</div>
-
-
-			<div class="container">
-				<div class="col">
+			<div class="container sales-boxes" style="max-width: 900px">
+				<div class="col ">
 					<div class="signup-form">
 						<form name="form2" action="javascript:void(0)"
 							onsubmit="onPatRegister()">
