--- a/src/main/resources/templates/doctorDashboard.html
+++ b/src/main/resources/templates/doctorDashboard.html
@@ -82,7 +82,7 @@
 				</div>
 				<div class="box">
 					<div class="right-side">
-						<div class="box-topic">Appointment Scheduled</div>
+						<div class="box-topic">Appointments Scheduled</div>
 						<div id="docTotalScheduled">38</div>
 
 					</div>
