--- a/src/main/resources/templates/patientBookAppointment.html
+++ b/src/main/resources/templates/patientBookAppointment.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Patient Appointment Booking | PASS App</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
-<link rel="stylesheet" href="../static/patientDash.css"
-	th:href="@{/patientDash.css}">
-<!-- <link rel="stylesheet" href="style2.css" th:href="@{style2.css}"> -->
-<!-- <link rel="stylesheet" href="style.css"th:href="@{style.css}"> -->
-<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
-	rel='stylesheet'>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="ISO-8859-1">
+	<title>Patient Appointment Booking | PASS App</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="../static/patientDash.css" th:href="@{/patientDash.css}">
+	<!-- <link rel="stylesheet" href="style2.css" th:href="@{style2.css}"> -->
+	<!-- <link rel="stylesheet" href="style.css"th:href="@{style.css}"> -->
+	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+
 <body>
 	<div class="sidebar">
 		<div class="logo-details">
@@ -26,108 +23,98 @@
 		<ul class="nav-links">
 			<li><a th:href="@{/patient}"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
-			</a></li>
-			<li><a th:href="@{/patient/patientBookAppointment}"
-				class="active"> <i class='bx bx-user'></i> <span
-					class="links_name">Book Appointment</span>
-			</a></li>
-			<li><a th:href="@{/patient/patientTotalAppointment}"> <i
-					class='bx bx-book-alt'></i> <span class="links_name">Total
+				</a></li>
+			<li><a th:href="@{/patient/patientBookAppointment}" class="active"> <i class='bx bx-user'></i> <span
+						class="links_name">Book Appointment</span>
+				</a></li>
+			<li><a th:href="@{/patient/patientTotalAppointment}"> <i class='bx bx-book-alt'></i> <span
+						class="links_name">Total
 						Appointments</span>
-			</a></li>
-			<li><a th:href="@{/patient/patientReview}"> <i
-					class='bx bx-message'></i> <span class="links_name">Review</span>
-			</a></li>
+				</a></li>
+			<li><a th:href="@{/patient/patientReview}"> <i class='bx bx-message'></i> <span
+						class="links_name">Review</span>
+				</a></li>
 			<li class="log_out"><button
 					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
-					class="links_name" onclick="logout()">Log out</button> <i
-				style="min-width: 33px;" class='bx bx-log-out'></i></li>
+					class="links_name" onclick="logout()">Log out</button> <i style="min-width: 33px;"
+					class='bx bx-log-out'></i></li>
 		</ul>
 	</div>
 	<section class="home-section">
 		<nav>
 			<div id="sidebutton" class="sidebar-button">
-				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Review</span>
-			</div>
-			<div class="search-box">
-				<input type="text" placeholder="Search..."> <i
-					class='bx bx-search'></i>
+				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Book Appointment</span>
 			</div>
 			<div class="profile-details">
-				<img src="../images/profile.jpg" alt=""> <span
-					class="admin_name">Prem Shahi</span> <i class='bx bx-chevron-down'></i>
+				<img src="../images/profile.jpg" alt=""> <span class="admin_name">Prem Shahi</span> <i
+					class='bx bx-chevron-down'></i>
 			</div>
 		</nav>
 
 		<div id="appoBook" class="home-content">
 			<div class="patientAppo">
 				<div class="signup-form">
-					<form name="form2" action="javascript:void(0)"
-						onsubmit="onPatRegister()">
+					<form name="bookAppointmentFrom" id="bookAppointmentFrom" action="javascript:void(0)"
+						onsubmit="onBookAppointment()">
 						<h2>Appointment Booking</h2>
 						<p>Please fill in this form to book an appointment!</p>
 						<hr>
-						<label style="color: black">Doctors's Name</label><br>
-                        <div class="form-group">
-                            <div>
-                                <input type="text" class="form-control" id="docName" name="name"
-                                    placeholder="Name" required="required">
-                                <div id="validationServer03Feedback" class="invalid-feedback">
-                                    Please provide a valid Name.</div>
-                            </div>
-                            
-                        <label style="color: black" >Doctor's Specification</label><br>
+						<label for="docName" style="color: black">Doctors's Name</label><br>
 						<div class="form-group">
-							<select class="form-control" name="specialization"
-								id="docSpecialization">
-								<option value="Anesthesiologists">Anesthesiologists</option>
-								<option value="Cardiologists">Cardiologists</option>
-								<option value="Neurologists">Neurologists</option>
-								<option value="Radiologists">Radiologists</option>
+							<select required="required" onchange="onDocChange()" class="form-control" name="name"
+								id="docName">
+								<option value="">Select Doctor</option>
+								<option th:each="doc : ${doctors}" th:value="${doc.doctorId}" th:text="${doc.name}">
+								</option>
 							</select>
 						</div>
 
-							<label style="color: black">Date Of Appointment</label><br>
-							<div class="form-group">
-								<div>
-									<input type="date" class="form-control" name="dob">
-								</div>
+						<label for="docSpecialization" style="color: black">Doctor's Specification</label><br>
+						<div class="form-group">
+							<div>
+								<input type="text" disabled class="form-control" name="specialization"
+									id="docSpecialization" required="required">
 							</div>
+						</div>
 
-							<label style="color: black">Patient's Name</label><br>
-							<div class="form-group">
-								<div>
-									<input type="text" class="form-control" id="patName"
-										name="name" placeholder="Name" required="required">
-									<div id="validationServer03Feedback" class="invalid-feedback">
-										Please provide a valid Name.</div>
-								</div>
+						<label style="color: black">Date Of Appointment</label><br>
+						<div class="form-group">
+							<div>
+								<input type="date" class="form-control" id="datOfApp">
+							</div>
+						</div>
+
+						<label style="color: black">Patient's Name</label><br>
+						<div class="form-group">
+							<div>
+								<input type="text" class="form-control" id="patName" name="name" placeholder="Name"
+									required="required">
+								<div id="validationServer03Feedback" class="invalid-feedback">
+									Please provide a valid Name.</div>
+							</div>
 							<label style="color: black">Problem</label><br>
 							<div class="form-group">
 								<div>
-									<input type="text" class="form-control" id="problem"
-										name="problem" placeholder="Problem" required="required">
+									<input type="text" class="form-control" id="problem" name="problem"
+										placeholder="Problem" required="required">
 									<div id="validationServer03Feedback" class="invalid-feedback">
 										Please provide a valid Problem.
 									</div>
 								</div>
-							<label style="color: black">Date Of Birth</label><br>
-							<div class="form-group">
+								<label style="color: black">Patient's Date Of Birth</label><br>
+								<div class="form-group">
 									<div>
-										<input type="date" class="form-control" name="dob">
+										<input type="date" class="form-control" id="patDob">
 									</div>
 								</div>
 
 								<div class="form-group">
-									<label style="color: black">Gender</label><br> 
-									<select class="form-control" name="gender" id="html">
+									<label style="color: black">Patient's Gender</label><br>
+									<select class="form-control" id="patGender">
 										<option value="male">Male</option>
 										<option value="female">Female</option>
 										<option value="other">Other</option>
 									</select>
-									<!-- <input type="radio"  ><label>Male</label><br>
-									<input type="radio" name="gender" id="html" ><label>Female</label><br>
-									<input type="radio" name="gender" id="html" ><label>Other</label> -->
 								</div>
 
 								<div class="form-group">
@@ -138,16 +125,44 @@
 			</div>
 		</div>
 	</section>
+
+	<div style="position: absolute; top: 20px; right: 20px;" id="myToast" data-bs-delay="10000"
+		class="toast align-items-center text-white bg-danger border-0" role="alert" aria-live="assertive"
+		aria-atomic="true">
+		<div class="d-flex">
+			<div id="toast-body-message" class="toast-body">Hello, world!
+				This is a toast message.</div>
+			<button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+				aria-label="Close"></button>
+		</div>
+	</div>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-		crossorigin="anonymous"></script>
-	<script type="text/javascript" src="../static/mainjs.js"
-		th:src="@{/mainjs.js}">
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../static/mainjs.js" th:src="@{/mainjs.js}">
 	</script>
 	<script>
+
+		function onDocChange() {
+			var docId = document.getElementById("docName").value;
+
+			fetch("http://localhost:8080/doctor/getDoctor/" + docId)
+				.then(function (response) {
+					return response.json();
+				})
+				.then(function (data) {
+					if (data.status) {
+						document.getElementById("docSpecialization").value = data.data.specialization;
+					}
+				});
+
+			var docSpecialization = document.getElementById("docSpecialization");
+			docSpecialization.value = docName.specialization;
+		}
+
+
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
-		sidebarBtn.onclick = function() {
+		sidebarBtn.onclick = function () {
 			sidebar.classList.toggle("active");
 			if (sidebar.classList.contains("active")) {
 				sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
@@ -155,23 +170,10 @@
 				sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
 		}
 	</script>
-	<!-- <script>
-            function dashboard(){
-                document.getElementById("dash").style.display = "block";
-                document.getElementById("appoBook").style.display = "none";
-                // document.getElementById("sidebutton").getElementsByClassName("dashboard").classList.replace("Book Appointment","Dashboard");
-            }
-            function bookAppo(){
-                document.getElementById("appoBook").style.display = "block";
-                document.getElementById("dash").style.display = "none";
-                // document.getElementById("sidebutton").getElementsByClassName("dashboard").classList.replace("Dashboard","Book Appointment");
-            }
-        </script> -->
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-		crossorigin="anonymous">
-		
-	</script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+
+		</script>
 </body>
+
 </html>
