--- a/src/main/resources/templates/patientDashboard.html
+++ b/src/main/resources/templates/patientDashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <meta charset="ISO-8859-1">
 <title>Patient Dashboard | PASS App</title>
@@ -23,6 +24,7 @@
 }
 </style>
 </head>
+
 <body>
 	<div class="sidebar">
 		<div class="logo-details">
@@ -70,7 +72,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Total Appointments Booked</div>
-						<div class="number">876</div>
+						<div class="number" id="totalAppBooked"></div>
 					</div>
 				</div>
 				<div class="box">
@@ -86,7 +88,7 @@
 				<div class="recent-sales box">
 					<div class="title">Recent Appointments Booked</div>
 					<div class="sales-details">
-						<table class="detail" id="detail">
+						<table class="detail" id="patientRecentAppointments">
 							<tr>
 								<th class="topic">Appointment ID</th>
 								<th class="topic">Doctor Name</th>
@@ -94,70 +96,6 @@
 								<th class="topic">Appointment Date/Time</th>
 								<th class="topic">For Whom</th>
 								<th class="topic">Problem</th>
-							</tr>
-							<tr onclick="addRowHandlers()">
-								<td>876</td>
-								<td>Dr Joy</td>
-								<td>Dermatologist</td>
-								<td>12/3/22 3:00pm</td>
-								<td>Mother</td>
-								<td>Suryosis</td>
-							</tr>
-							<tr onclick="addRowHandlers()">
-								<td>875</td>
-								<td>Dr Nikhar</td>
-								<td>Rheumatologist</td>
-								<td>1/3/22 4:00pm</td>
-								<td>Father</td>
-								<td>Leg Arthritis</td>
-							</tr>
-							<tr onclick="addRowHandlers()">
-								<td>874</td>
-								<td>Dr Fatima</td>
-								<td>Child Specilist</td>
-								<td>1/2/22 6:00pm</td>
-								<td>Daughter</td>
-								<td>Child Fever</td>
-							</tr>
-							<tr onclick="addRowHandlers()">
-								<td>873</td>
-								<td>Dr Nidhi</td>
-								<td>Gastroenterologist</td>
-								<td>25/1/22 12:00pm</td>
-								<td>Wife</td>
-								<td>Constant Stomach Pain</td>
-							</tr>
-							<tr onclick="addRowHandlers()">
-								<td>872</td>
-								<td>Dr Aasaf</td>
-								<td>Cardiologist</td>
-								<td>17/12/21 1:00pm</td>
-								<td>Self</td>
-								<td>Routin Heart Check-up</td>
-							</tr>
-							<tr onclick="addRowHandlers()">
-								<td>871</td>
-								<td>Dr Piyusha</td>
-								<td>Psychiatrist</td>
-								<td>1/11/21 2:00pm</td>
-								<td>Servet</td>
-								<td>Servent got mad after hitting his head</td>
-							</tr>
-							<tr onclick="addRowHandlers()">
-								<td>870</td>
-								<td>Dr Jayesh</td>
-								<td>General Physician</td>
-								<td>25/9/21 6:00pm</td>
-								<td>GrandMother</td>
-								<td>Chorona</td>
-							</tr>
-							<tr onclick="addRowHandlers()">
-								<td>869</td>
-								<td>Dr Krutika</td>
-								<td>General Physician</td>
-								<td>20/7/21 5:00pm</td>
-								<td>GrandFather</td>
-								<td>Chorona</td>
 							</tr>
 						</table>
 					</div>
@@ -174,45 +112,10 @@
 							<th class="product">Speciality</th>
 							<th class="product">Fees</th>
 						</tr>
-						<tr>
-							<td>Dr Joy</td>
-							<td>Dermatologist</td>
-							<td class="price">Rs.876</td>
-						</tr>
-						<tr>
-							<td>Dr Nikhar</td>
-							<td>Rheumatologist</td>
-							<td class="price">Rs.875</td>
-						</tr>
-						<tr>
-							<td>Dr Fatima</td>
-							<td>Child Specilist</td>
-							<td class="price">Rs.874</td>
-						</tr>
-						<tr>
-							<td>Dr Nidhi</td>
-							<td>Gastroenterologist</td>
-							<td class="price">Rs.873</td>
-						</tr>
-						<tr>
-							<td>Dr Aasaf</td>
-							<td>Cardiologist</td>
-							<td class="price">Rs.872</td>
-						</tr>
-						<tr>
-							<td>Dr Piyusha</td>
-							<td>Psychiatrist</td>
-							<td class="price">Rs.871</td>
-						</tr>
-						<tr>
-							<td>Dr Jayesh</td>
-							<td>General Physician</td>
-							<td class="price">Rs.870</td>
-						</tr>
-						<tr>
-							<td>Dr Krutika</td>
-							<td>General Physician</td>
-							<td class="price">Rs.869</td>
+						<tr th:each="docs : ${topDoctors}">
+							<td th:text="${'Dr. '+docs.name}"></td>
+							<td th:text="${docs.specialization}"></td>
+							<td th:text="${'Rs. '+docs.fee}" class="price"></td>
 						</tr>
 
 					</table>
@@ -235,13 +138,13 @@
 								<th class="topic">Problem</th>
 							</tr>
 							<tr>
-                                <td id="id"></td>
-                                <td id="docName"></td>
-                                <td id="docSpec"></td>
-                                <td id="apDT"></td>
-                                <td id="famMem"></td>
-                                <td id="probl"></td>
-                            </tr>
+								<td id="id"></td>
+								<td id="docName"></td>
+								<td id="docSpec"></td>
+								<td id="apDT"></td>
+								<td id="famMem"></td>
+								<td id="probl"></td>
+							</tr>
 							<!-- <tr>
 								<td>876</td>
 								<td>Dr Joy</td>
@@ -263,6 +166,8 @@
 		th:src="@{/mainjs.js}">
 		
 	</script>
+	<script type="text/javascript" src="../static/getPatientApp.js"
+		th:src="@{/getPatientApp.js}"></script>
 	<script>
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
@@ -275,44 +180,44 @@
 		}
 	</script>
 	<script>
-            function addRowHandlers() {
-                var table = document.getElementById("detail");
-                var rows = table.getElementsByTagName("tr");
-                var tables = "";
-                for (i = 0; i < rows.length; i++) {
-                    var currentRow = table.rows[i];
-                    var createClickHandler = function(row) {
-                        return function() {
-                            var id = row.getElementsByTagName("td")[0];
-                            var appoid = id.innerHTML;
-                            var name = row.getElementsByTagName("td")[1];
-                            var docname = name.innerHTML;
-                            var spec = row.getElementsByTagName("td")[2];
-                            var docspec = spec.innerHTML;
-                            var dt = row.getElementsByTagName("td")[3];
-                            var appodt = dt.innerHTML;
-                            var fname = row.getElementsByTagName("td")[4];
-                            var familyname = fname.innerHTML;
-                            var prob = row.getElementsByTagName("td")[5];
-                            var patprob = prob.innerHTML;
-                            // alert(" Appointment Id: " + appoid + "\n Doctor's Name: " + docname + "\n Doctor's Specification: " + docspec + "\n Appointment Date/Time: " + appodt + "\n For Whome: " +familyname+ "\n Problem: " + patprob);
-                            document.getElementById("id").innerHTML = appoid ;
-                            document.getElementById("docName").innerHTML = docname ;
-                            document.getElementById("docSpec").innerHTML = docspec ;
-                            document.getElementById("apDT").innerHTML = appodt ;
-                            document.getElementById("famMem").innerHTML = familyname ;
-                            document.getElementById("probl").innerHTML = patprob ;
-                            var x = document.getElementById("appoBook");
-                            if (x.style.display === "none") {
-                                x.style.display = "block";
-                            } else {
-                                x.style.display = "none";
-                            }
-                            };
-                        };
-                    currentRow.onclick = createClickHandler(currentRow);
-                    }
-                }
+		function addRowHandlers() {
+			var table = document.getElementById("detail");
+			var rows = table.getElementsByTagName("tr");
+			var tables = "";
+			for (i = 0; i < rows.length; i++) {
+				var currentRow = table.rows[i];
+				var createClickHandler = function(row) {
+					return function() {
+						var id = row.getElementsByTagName("td")[0];
+						var appoid = id.innerHTML;
+						var name = row.getElementsByTagName("td")[1];
+						var docname = name.innerHTML;
+						var spec = row.getElementsByTagName("td")[2];
+						var docspec = spec.innerHTML;
+						var dt = row.getElementsByTagName("td")[3];
+						var appodt = dt.innerHTML;
+						var fname = row.getElementsByTagName("td")[4];
+						var familyname = fname.innerHTML;
+						var prob = row.getElementsByTagName("td")[5];
+						var patprob = prob.innerHTML;
+						// alert(" Appointment Id: " + appoid + "\n Doctor's Name: " + docname + "\n Doctor's Specification: " + docspec + "\n Appointment Date/Time: " + appodt + "\n For Whome: " +familyname+ "\n Problem: " + patprob);
+						document.getElementById("id").innerHTML = appoid;
+						document.getElementById("docName").innerHTML = docname;
+						document.getElementById("docSpec").innerHTML = docspec;
+						document.getElementById("apDT").innerHTML = appodt;
+						document.getElementById("famMem").innerHTML = familyname;
+						document.getElementById("probl").innerHTML = patprob;
+						var x = document.getElementById("appoBook");
+						if (x.style.display === "none") {
+							x.style.display = "block";
+						} else {
+							x.style.display = "none";
+						}
+					};
+				};
+				currentRow.onclick = createClickHandler(currentRow);
+			}
+		}
 		// function dashboard(){
 		//     document.getElementById("dash").style.display = "block";
 		//     document.getElementById("appoBook").style.display = "none";
@@ -332,4 +237,5 @@
 	</script>
 
 </body>
+
 </html>
