--- a/src/main/resources/templates/patientReview.html
+++ b/src/main/resources/templates/patientReview.html
@@ -46,12 +46,7 @@
 	<section class="home-section">
 		<nav>
 			<div id="sidebutton" class="sidebar-button">
-				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Book
-					Appointment</span>
-			</div>
-			<div class="search-box">
-				<input type="text" placeholder="Search..."> <i
-					class='bx bx-search'></i>
+				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Review</span>
 			</div>
 			<div class="profile-details">
 				<img src="../images/profile.jpg" alt=""> <span
