--- a/src/main/resources/templates/patientTotalAppointment.html
+++ b/src/main/resources/templates/patientTotalAppointment.html
@@ -1,117 +1,120 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="ISO-8859-1">
-		<title>Patient Total Appointments | PASS App</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous">
-            <link rel="stylesheet" href="../static/patientDash.css" th:href="@{/patientDash.css}">
-		<!-- <link rel="stylesheet" href="style2.css" th:href="@{style2.css}"> -->
-		<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<style>
-		.home-content .sales-boxes .recent-sales{
-		width : 100%;
+
+<head>
+<meta charset="ISO-8859-1">
+<title>Patient Total Appointments | PASS App</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+	crossorigin="anonymous">
+<link rel="stylesheet" href="../static/patientDash.css"
+	th:href="@{/patientDash.css}">
+<!-- <link rel="stylesheet" href="style2.css" th:href="@{style2.css}"> -->
+<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
+	rel='stylesheet'>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+.home-content .sales-boxes .recent-sales {
+	width: 100%;
+}
+</style>
+</head>
+
+<body>
+	<div class="sidebar">
+		<div class="logo-details">
+			<i class='bx bx-plus-medical'></i> <span class="logo_name">PASS
+				App</span>
+		</div>
+		<ul class="nav-links">
+			<li><a th:href="@{/patient}"> <i class='bx bx-grid-alt'></i>
+					<span class="links_name">Dashboard</span>
+			</a></li>
+			<li><a th:href="@{/patient/patientBookAppointment}"> <i
+					class='bx bx-user'></i> <span class="links_name">Book
+						Appointment</span>
+			</a></li>
+			<li><a th:href="@{/patient/patientTotalAppointment}"
+				class="active"> <i class='bx bx-book-alt'></i> <span
+					class="links_name">Total Appointments</span>
+			</a></li>
+			<li><a th:href="@{/patient/patientReview}"> <i
+					class='bx bx-message'></i> <span class="links_name">Review</span>
+			</a></li>
+			<li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
+					<span class="links_name">Log out</span>
+			</a></li>
+		</ul>
+	</div>
+	<section class="home-section">
+		<nav>
+			<div id="sidebutton" class="sidebar-button">
+				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Total
+					Appointments</span>
+			</div>
+			<div class="search-box">
+				<input type="text" placeholder="Search..."> <i
+					class='bx bx-search'></i>
+			</div>
+			<div class="profile-details">
+				<img src="../images/profile.jpg" alt=""> <span
+					class="admin_name">Prem Shahi</span> <i class='bx bx-chevron-down'></i>
+			</div>
+		</nav>
+
+		<div class="home-content">
+			<div class="sales-boxes">
+				<div class="recent-sales box">
+					<div class="title">Total Appontments Booked</div>
+					<div class="sales-details">
+						<table class="details" id="appointmentsTable">
+							<tr>
+								<th class="topic">Appointment ID</th>
+								<th class="topic">Doctor Name</th>
+								<th class="topic">Doctor Speciality</th>
+								<th class="topic">Appointment</br> Date/Time
+								</th>
+								<th class="topic">For Whom</th>
+								<th class="topic">Problem</th>
+								<th class="topic">Status</th>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+	</section>
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+		crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../static/mainjs.js"
+		th:src="@{/mainjs.js}">
+		
+	</script>
+	<script type="text/javascript" src="../static/getPatientApp.js"
+		th:src="@{/getPatientApp.js}"></script>
+
+	<script>
+		let sidebar = document.querySelector(".sidebar");
+		let sidebarBtn = document.querySelector(".sidebarBtn");
+		sidebarBtn.onclick = function() {
+			sidebar.classList.toggle("active");
+			if (sidebar.classList.contains("active")) {
+				sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+			} else
+				sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
 		}
-		</style>
-	</head>
-
-	<body>
-        <div class="sidebar">
-            <div class="logo-details">
-                <i class='bx bx-plus-medical'></i> <span class="logo_name">PASS App</span>
-            </div>
-            <ul class="nav-links">
-                <li><a th:href="@{/patient}" > <i class='bx bx-grid-alt'></i>
-                        <span class="links_name">Dashboard</span>
-                </a></li>
-            <li><a th:href="@{/patient/patientBookAppointment}"> <i class='bx bx-user'></i> <span
-                        class="links_name">Book
-                        Appointment</span>
-                </a></li>
-            <li><a th:href="@{/patient/patientTotalAppointment}" class="active"> <i class='bx bx-book-alt'></i> <span
-                        class="links_name">Total Appointments</span>
-                </a></li>
-            <li><a th:href="@{/patient/patientReview}"> <i class='bx bx-message'></i> <span
-                        class="links_name">Review</span>
-                </a></li>
-            <li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
-                    <span class="links_name">Log out</span>
-                </a></li>
-        </ul>
-    </div>
-    <section class="home-section">
-        <nav>
-            <div id="sidebutton" class="sidebar-button">
-                <i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Total
-                    Appointments</span>
-            </div>
-            <div class="search-box">
-                <input type="text" placeholder="Search..."> <i class='bx bx-search'></i>
-            </div>
-            <div class="profile-details">
-                <img src="../images/profile.jpg" alt=""> <span class="admin_name">Prem Shahi</span> <i
-                    class='bx bx-chevron-down'></i>
-            </div>
-        </nav>
-
-        <div class="home-content">
-            <div class="sales-boxes">
-                <div class="recent-sales box">
-                    <div class="title">Total Appontments Booked</div>
-                    <div class="sales-details">
-                        <table class="details" id="appointmentsTable">
-                            <tr>
-                                <th class="topic">Appointment ID</th>
-                                <th class="topic">Doctor Name</th>
-                                <th class="topic">Doctor Speciality</th>
-                                <th class="topic">Appointment</br> Date/Time
-                                </th>
-                                <th class="topic">For Whom</th>
-                                <th class="topic">Problem</th>
-                                <th class="topic">Status</th>
-                            </tr>
-                            <tr>
-                                <td>876</td>
-                                <td>Dr Joy</td>
-                                <td>Dermatologist</td>
-                                <td>12/3/22 3:00pm</td>
-                                <td>Mother</td>
-                                <td>Suryosis</td>
-                                <td>Pending</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../static/getPatientApp.js" th:src="@{/getPatientApp.js}"></script>
-    <script type="text/javascript" src="../static/mainjs.js" th:src="@{/mainjs.js}">
-
-    </script>
-
-    <script>
-        let sidebar = document.querySelector(".sidebar");
-        let sidebarBtn = document.querySelector(".sidebarBtn");
-        sidebarBtn.onclick = function () {
-            sidebar.classList.toggle("active");
-            if (sidebar.classList.contains("active")) {
-                sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
-            } else
-                sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
-        }
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-
-        </script>
+	</script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous">
+		
+	</script>
 </body>
 
 </html>
