--- a/src/main/resources/templates/doctorPatientList.html
+++ b/src/main/resources/templates/doctorPatientList.html
@@ -74,21 +74,11 @@
 				<div class="recent-sales box">
 					<div class="title">Patient List</div>
 					<div class="sales-details">
-						<ul class="details">
+						<ul class="details" id="docPatName">
 							<li class="topic">Name</li>
-							<li><a href="#">Mrs.Verma</a></li>
-							<li><a href="#">Mr.Gupta</a></li>
-							<li><a href="#">Mr.Rawat</a></li>
-							<li><a href="#">Mrs.Shukla</a></li>
-							<li><a href="#">Mr.Singh</a></li>
 						</ul>
-						<ul class="details">
-							<li class="topic">Age/Gender</li>
-							<li><a href="#">54/F</a></li>
-							<li><a href="#">34/M</a></li>
-							<li><a href="#">45/M</a></li>
-							<li><a href="#">30/F</a></li>
-							<li><a href="#">29/M</a></li>
+						<ul class="details" id="docPatList">
+							<li class="topic">Gender</li>
 						</ul>
 						<ul class="details">
 							<li class="topic">Status</li>
@@ -123,6 +113,8 @@
 		
 	</script>
 	<script>
+
+
 
 	
 		let sidebar = document.querySelector(".sidebar");
