--- a/src/main/resources/templates/doctorAppointmentList.html
+++ b/src/main/resources/templates/doctorAppointmentList.html
@@ -2,33 +2,25 @@
 <html lang="en" dir="ltr">
 
 <head>
-<meta charset="UTF-8">
-<title>Doctor Home</title>
-<link rel="stylesheet" href="../static/style.css"
-	th:href="@{/style.css}">
-<link rel="stylesheet" href="../static/style2.css"
-	th:href="@{/style2.css}">
+	<meta charset="UTF-8">
+	<title>Doctor Home</title>
+	<link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}">
+	<link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}">
 
-<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'
-	rel='stylesheet'>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
+	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<script src="https://kit.fontawesome.com/c92909f8b0.js"
-	crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/b496fc4e58.js"
-	crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/c92909f8b0.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/b496fc4e58.js" crossorigin="anonymous"></script>
 
-<style>
-.home-content .overview-boxes {
-	justify-content: flex-start;
-	gap: 24px;
-}
-</style>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		.home-content .overview-boxes {
+			justify-content: flex-start;
+			gap: 24px;
+		}
+	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -40,20 +32,19 @@
 		<ul class="nav-links">
 			<li><a th:href="@{/doctor}"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
-			</a></li>
+				</a></li>
 			<li><a class="active" th:href="@{/doctor/doctorAppointmentList}">
 					<i class='bx bx-box'></i>Appointment List <span class="links_name"></span>
-			</a></li>
-			<li><a th:href="@{/doctor/doctorPatientList}"> <i
-					class='bx bx-box'></i>Patient List <span class="links_name"></span>
-			</a></li>
-			<li><a th:href="@{/doctor/doctorProfile}"> <i
-					class='bx bx-box'></i>Profile <span class="links_name"></span>
-			</a></li>
+				</a></li>
+			<li><a th:href="@{/doctor/doctorPatientList}"> <i class='bx bx-box'></i>Patient List <span
+						class="links_name"></span>
+				</a></li>
+			<li><a th:href="@{/doctor/doctorProfile}"> <i class='bx bx-box'></i>Profile <span class="links_name"></span>
+				</a></li>
 			<li class="log_out"><button
 					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
-					class="links_name" onclick="logout()">Log out</button> <i
-				style="min-width: 33px;" class='bx bx-log-out'></i></li>
+					class="links_name" onclick="logout()">Log out</button> <i style="min-width: 33px;"
+					class='bx bx-log-out'></i></li>
 		</ul>
 	</div>
 	<section class="home-section">
@@ -63,8 +54,7 @@
 			</div>
 
 			<div class="profile-details">
-				<img src="/images/profile.jpg" alt=""> <span
-					class="admin_name">Dr Gulati</span> <i></i>
+				<img src="/images/profile.jpg" alt=""> <span class="admin_name">Dr Gulati</span> <i></i>
 			</div>
 		</nav>
 
@@ -73,7 +63,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Total Appointments</div>
-						<div id="docTotalApp" class="number">50</div>
+						<div id="docTotalApp" class="number"></div>
 
 
 					</div>
@@ -82,7 +72,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Scheduled Appointments</div>
-						<div class="number">38</div>
+						<div class="number" id="docScheduleApp"></div>
 
 					</div>
 
@@ -90,7 +80,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Pending Appointments</div>
-						<div class="number">12</div>
+						<div class="number" id="docPendingApp"></div>
 
 					</div>
 
@@ -102,33 +92,17 @@
 					<div class="title">Recent Appointments</div>
 					<div class="sales-details"></div>
 					<div class="sales-details">
-						<ul class="details">
-							<li class="topic">Name</li>
-							<li><a href="#">Mrs.Anshika</li>
-							<li><a href="#">Mrs.Riya</a></li>
-							<li><a href="#">Mr.Akash</a></li>
-							<li><a href="#">Mr.Jay</a></li>
+						<ul class="details" id="patName">
+							<li class="topic">Patient's Name</li>
 						</ul>
-						<ul class="details">
-							<li class="topic">Age/Gender</li>
-							<li><a href="#">24/F</a></li>
-							<li><a href="#">19/F</a></li>
-							<li><a href="#">24/M</a></li>
-							<li><a href="#">22/M</a></li>
+						<ul class="details" id="patGender">
+							<li class="topic">Gender</li>
 						</ul>
-						<ul class="details">
+						<ul class="details" id="appStatus">
 							<li class="topic">Appointment status</li>
-							<li><a href="#">Scheduled</a></li>
-							<li><a href="#">Pending</a></li>
-							<li><a href="#">Pending</a></li>
-							<li><a href="#">Scheduled</a></li>
 						</ul>
-						<ul class="details">
+						<ul class="details" id="appDate">
 							<li class="topic">Scheduled date</li>
-							<li><a href="#">24/03/22</a></li>
-							<li><a href="#">Pending</a></li>
-							<li><a href="#">Pending</a></li>
-							<li><a href="#">24/03/22</a></li>
 						</ul>
 
 					</div>
@@ -137,33 +111,59 @@
 		</div>
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-		crossorigin="anonymous"></script>
-	<script type="text/javascript" src="../static/mainjs.js"
-		th:src="@{/mainjs.js}">
-		
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../static/mainjs.js" th:src="@{/mainjs.js}">
+
 	</script>
 	<script>
-	document.addEventListener('DOMContentLoaded', () => {
-		const doctor = JSON.parse(localStorage.getItem('doctor'));
-		
-		fetch("http://localhost:8080/appointment/doctorId/" + doctor.doctorId, {
-			method: 'GET',
-			headers: {
-				'Content-Type': 'application/json'
-			}
-		})
-		.then(res => res.json())
-		.then(data => {
-			if(data.status){
-				document.getElementById("docTotalApp").innerHTML = parseInt(data.data.length);
-			}
-		})
-	});
-	
+		document.addEventListener('DOMContentLoaded', () => {
+			const doctor = JSON.parse(localStorage.getItem('doctor'));
+
+			fetch("http://localhost:8080/appointment/doctorId/" + doctor.doctorId, {
+				method: 'GET',
+				headers: {
+					'Content-Type': 'application/json'
+				}
+			})
+				.then(res => res.json())
+				.then(data => {
+					if (data.status) {
+						document.getElementById("docTotalApp").innerHTML = parseInt(data.data.length);
+						document.getElementById("docScheduleApp").innerHTML = parseInt(data.data.filter(app => app.status === "Confirmed").length);
+						document.getElementById("docPendingApp").innerHTML = parseInt(data.data.filter(app => app.status === "Pending").length);
+
+
+						var patName = document.getElementById("patName");
+						var patGender = document.getElementById("patGender");
+						var appStatus = document.getElementById("appStatus");
+						var appDate = document.getElementById("appDate");
+
+						data.data.forEach(element => {
+							var nameLi = document.createElement("li");
+							nameLi.innerHTML = element.patientName;
+							patName.appendChild(nameLi);
+
+							var genderLi = document.createElement("li");
+							genderLi.innerHTML = element.patientGender;
+							patGender.appendChild(genderLi);
+
+							var statusLi = document.createElement("li");
+							statusLi.innerHTML = element.status;
+							appStatus.appendChild(statusLi);
+
+							var dateLi = document.createElement("li");
+							dateLi.innerHTML = element.appointmentTime;
+							appDate.appendChild(dateLi);
+						});
+
+
+					}
+				})
+		});
+
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
-		sidebarBtn.onclick = function() {
+		sidebarBtn.onclick = function () {
 			sidebar.classList.toggle("active");
 			if (sidebar.classList.contains("active")) {
 				sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
@@ -171,17 +171,14 @@
 				sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
 		}
 	</script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 
-	<script
-		src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
 		integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
 		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
 		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
 		crossorigin="anonymous"></script>
 </body>
