--- a/src/main/resources/templates/doctorPatientList.html
+++ b/src/main/resources/templates/doctorPatientList.html
@@ -2,34 +2,26 @@
 <html lang="en" dir="ltr">
 
 <head>
-<meta charset="UTF-8">
-<title>Doctor Home</title>
+	<meta charset="UTF-8">
+	<title>Doctor Home</title>
 
-<link rel="stylesheet" href="../static/style.css"
-	th:href="@{/style.css}">
-<link rel="stylesheet" href="../static/style2.css"
-	th:href="@{/style2.css}">
+	<link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}">
+	<link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}">
 
-<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'
-	rel='stylesheet'>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
+	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<script src="https://kit.fontawesome.com/c92909f8b0.js"
-	crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/b496fc4e58.js"
-	crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/c92909f8b0.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/b496fc4e58.js" crossorigin="anonymous"></script>
 
-<style>
-.home-content .overview-boxes {
-	justify-content: flex-start;
-	gap: 24px;
-}
-</style>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		.home-content .overview-boxes {
+			justify-content: flex-start;
+			gap: 24px;
+		}
+	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -41,20 +33,19 @@
 		<ul class="nav-links">
 			<li><a th:href="@{/doctor}"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
-			</a></li>
-			<li><a th:href="@{/doctor/doctorAppointmentList}"> <i
-					class='bx bx-box'></i>Appointment List <span class="links_name"></span>
-			</a></li>
+				</a></li>
+			<li><a th:href="@{/doctor/doctorAppointmentList}"> <i class='bx bx-box'></i>Appointment List <span
+						class="links_name"></span>
+				</a></li>
 			<li><a class="active" th:href="@{/doctor/doctorPatientList}">
 					<i class='bx bx-box'></i>Patient List <span class="links_name"></span>
-			</a></li>
-			<li><a th:href="@{/doctor/doctorProfile}"> <i
-					class='bx bx-box'></i>Profile <span class="links_name"></span>
-			</a></li>
+				</a></li>
+			<li><a th:href="@{/doctor/doctorProfile}"> <i class='bx bx-box'></i>Profile <span class="links_name"></span>
+				</a></li>
 			<li class="log_out"><button
 					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
-					class="links_name" onclick="logout()">Log out</button> <i
-				style="min-width: 33px;" class='bx bx-log-out'></i></li>
+					class="links_name" onclick="logout()">Log out</button> <i style="min-width: 33px;"
+					class='bx bx-log-out'></i></li>
 		</ul>
 	</div>
 	<section class="home-section">
@@ -64,8 +55,7 @@
 			</div>
 
 			<div class="profile-details">
-				<img src="/images/profile.jpg" alt=""> <span
-					class="admin_name">Dr. Gulati</span> <i></i>
+				<img src="/images/profile.jpg" alt=""> <span class="admin_name">Dr. Gulati</span> <i></i>
 			</div>
 		</nav>
 
@@ -77,24 +67,14 @@
 						<ul class="details" id="docPatName">
 							<li class="topic">Name</li>
 						</ul>
-						<ul class="details" id="docPatList">
+						<ul class="details" id="docPatGender">
 							<li class="topic">Gender</li>
 						</ul>
-						<ul class="details">
+						<ul class="details" id="docPatStatus">
 							<li class="topic">Status</li>
-							<li><a href="#">Diagnosed</a></li>
-							<li><a href="#">Diagnosed</a></li>
-							<li><a href="#">Pending</a></li>
-							<li><a href="#">Diagnosed</a></li>
-							<li><a href="#">Diagnosed</a></li>
 						</ul>
-						<ul class="details">
+						<ul class="details" id="docPatFee">
 							<li class="topic">Fees</li>
-							<li><a href="#">Rs.750</a></li>
-							<li><a href="#">Rs.650</a></li>
-							<li><a href="#">Rs.750</a></li>
-							<li><a href="#">Rs.750</a></li>
-							<li><a href="#">Rs.750</a></li>
 						</ul>
 					</div>
 
@@ -106,20 +86,16 @@
 		</div>
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-		crossorigin="anonymous"></script>
-	<script type="text/javascript" src="../static/mainjs.js"
-		th:src="@{/mainjs.js}">
-		
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../static/mainjs.js" th:src="@{/mainjs.js}">
+
 	</script>
+	<script type="text/javascript" src="../static/docDash.js" th:src="@{/docDash.js}"></script>
 	<script>
 
-
-
-	
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
-		sidebarBtn.onclick = function() {
+		sidebarBtn.onclick = function () {
 			sidebar.classList.toggle("active");
 			if (sidebar.classList.contains("active")) {
 				sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
@@ -127,17 +103,14 @@
 				sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
 		}
 	</script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 
-	<script
-		src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
 		integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
 		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
 		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
 		crossorigin="anonymous"></script>
 </body>
