logout fixed with home page book app button

--- a/src/main/resources/templates/deleteAppointment.html
+++ b/src/main/resources/templates/deleteAppointment.html
@@ -51,10 +51,9 @@
 			<li><a href="@{/receptionist/appointmentPerDoctor}"> <i
 					class='bx bx-cog'></i> <span class="links_name">AppointmentperDoctor</span>
 			</a></li>
-			<li class="log_out"><button
-					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
-					class="links_name" onclick="logout()">Log out</button> <i
-				style="min-width: 33px;" class='bx bx-log-out'></i></li>
+			<li class="log_out"><a onclick="logout()"> <i
+				class='bx bx-log-out'></i> <span class="links_name">Log out</span>
+		</a></li>
 		</ul>
 	</div>
 	<section class="home-section">
