--- a/src/main/resources/templates/appointmentPerDoctor.html
+++ b/src/main/resources/templates/appointmentPerDoctor.html
@@ -2,19 +2,14 @@
 <html lang="en" dir="ltr">
 
 <head>
-<meta charset="UTF-8">
-<title>Appointment per Doctor</title>
-<link rel="stylesheet" href="../static/style2.css"
-	th:href="@{/style2.css}">
-<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
-	rel='stylesheet'>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<title>Appointment per Doctor</title>
+	<link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}">
+	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -26,42 +21,36 @@
 		<ul class="nav-links">
 			<li><a th:href="@{/receptionist}" class="active"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
-			</a></li>
+				</a></li>
 			<li><a th:href="@{/receptionist/deleteAppointment}"> <i class='bx bx-box'></i> <span
-					class="links_name">Delete </span>
-			</a></li>
+						class="links_name">Delete </span>
+				</a></li>
 			<li><a th:href="@{/receptionist/updateAppointment}"> <i class='bx bx-list-ul'></i> <span
-					class="links_name">Reschedule </span>
-			</a></li>
-			<li><a th:href="@{/receptionist}"> <i class='bx bx-pie-chart-alt-2'></i> <span
-					class="links_name"> Print Receipt</span>
-			</a></li>
+						class="links_name">Reschedule </span>
+				</a></li>
+			<li><a th:href="@{/receptionist}"> <i class='bx bx-pie-chart-alt-2'></i> <span class="links_name"> Print
+						Receipt</span>
+				</a></li>
 			<li><a th:href="@{/receptionist/updateSpecialization}"> <i class='bx bx-coin-stack'></i> <span
-					class="links_name">Specialization</span>
-			</a></li>
+						class="links_name">Specialization</span>
+				</a></li>
 			<li><a th:href="@{/receptionist/patientPrescription}"> <i class='bx bx-book-alt'></i> <span
-					class="links_name">Prescriptions</span>
-			</a></li>
-			<li><a href="@{/receptionist}"> <i class='bx bx-user'></i> <span
-					class="links_name">Delayed</span>
-			 </a></li>
+						class="links_name">Prescriptions</span>
+				</a></li>
+			<li><a href="@{/receptionist}"> <i class='bx bx-user'></i> <span class="links_name">Delayed</span>
+				</a></li>
 			<li><a href="@{/receptionist/appointmentPerDoctor}"> <i class='bx bx-cog'></i> <span
-					class="links_name">AppointmentperDoctor</span>
-			</a></li> 
-			<li class="log_out"><button
-					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
-					class="links_name" onclick="logout()">Log out</button> <i
-				style="min-width: 33px;" class='bx bx-log-out'></i></li>
+						class="links_name">AppointmentperDoctor</span>
+				</a></li>
+			<li class="log_out"><a onclick="logout()"> <i class='bx bx-log-out'></i> <span class="links_name">Log
+						out</span>
+				</a></li>
 		</ul>
 	</div>
 	<section class="home-section">
 		<nav>
 			<div class="sidebar-button">
 				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Dashboard</span>
-			</div>
-			<div class="search-box">
-				<input type="text" placeholder="Search..."> <i
-					class='bx bx-search'></i>
 			</div>
 			<div class="profile-details">
 				<img src="images/profile.jpg" alt=""> <span class="admin_name">Prem
@@ -158,32 +147,32 @@
 								<span class="product">Dr Gulati</span> </a>
 							<div class="form-check form-switch">
 								<input class="form-check-input" type="checkbox" role="switch"
-									id="flexSwitchCheckChecked" checked> <label
-									class="form-check-label" for="flexSwitchCheckChecked"></label>
-							</div></li>
+									id="flexSwitchCheckChecked" checked> <label class="form-check-label"
+									for="flexSwitchCheckChecked"></label>
+							</div>
+						</li>
 						<li><a href="#"><i class="fa-solid fa-user-tie-hair-long"></i>
 								<span class="product">Dr Nidhi</span> </a>
 							<div class="form-check form-switch">
 								<input class="form-check-input" type="checkbox" role="switch"
-									id="flexSwitchCheckChecked" checked> <label
-									class="form-check-label" for="flexSwitchCheckChecked"></label>
-							</div></li>
+									id="flexSwitchCheckChecked" checked> <label class="form-check-label"
+									for="flexSwitchCheckChecked"></label>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-		crossorigin="anonymous"></script>
-	<script type="text/javascript" src="../static/mainjs.js"
-		th:src="@{/mainjs.js}">
-		
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../static/mainjs.js" th:src="@{/mainjs.js}">
+
 	</script>
 	<script>
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
-		sidebarBtn.onclick = function() {
+		sidebarBtn.onclick = function () {
 			sidebar.classList.toggle("active");
 			if (sidebar.classList.contains("active")) {
 				sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
@@ -191,8 +180,7 @@
 				sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
 		}
 	</script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 </body>
