--- a/src/main/resources/templates/doctorPatientList.html
+++ b/src/main/resources/templates/doctorPatientList.html
@@ -42,10 +42,9 @@
 				</a></li>
 			<li><a th:href="@{/doctor/doctorProfile}"> <i class='bx bx-box'></i>Profile <span class="links_name"></span>
 				</a></li>
-			<li class="log_out"><button
-					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
-					class="links_name" onclick="logout()">Log out</button> <i style="min-width: 33px;"
-					class='bx bx-log-out'></i></li>
+			<li class="log_out"><a onclick="logout()"> <i class='bx bx-log-out'></i> <span class="links_name">Log
+						out</span>
+				</a></li>
 		</ul>
 	</div>
 	<section class="home-section">
