--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,9 @@
 				debitis at, perspiciatis consequatur iure vel, quae ratione.
 				Praesentium, at.</p>
 			<div class="button">
-				<a href="#">Book An Appointment <i class="fas fa-location-arrow"></i></a>
+				<a th:href="@{/patient/patientBookAppointment}">Book An
+					Appointment <i class="fas fa-location-arrow"></i>
+				</a>
 			</div>
 	</section>
 
@@ -120,7 +122,7 @@
 				class="fas fa-location-arrow"></i></a>
 		</div>
 
-	</section>		
+	</section>
 	</script>
 	<!-- Swiper JS -->
 	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
