--- a/src/main/resources/templates/patientTotalAppointment.html
+++ b/src/main/resources/templates/patientTotalAppointment.html
@@ -43,8 +43,8 @@
 			<li><a th:href="@{/patient/patientReview}"> <i
 					class='bx bx-message'></i> <span class="links_name">Review</span>
 			</a></li>
-			<li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
-					<span class="links_name">Log out</span>
+			<li class="log_out"><a onclick="logout()"> <i
+					class='bx bx-log-out'></i> <span class="links_name">Log out</span>
 			</a></li>
 		</ul>
 	</div>
