--- a/src/main/resources/templates/deleteAppointment.html
+++ b/src/main/resources/templates/deleteAppointment.html
@@ -4,9 +4,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Delete Appointment</title>
-<link rel="stylesheet" href="../static/patientDash.css" th:href="@{/patientDash.css}">
+<link rel="stylesheet" href="../static/patientDash.css"
+	th:href="@{/patientDash.css}">
 <!-- <link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}"> -->
-<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
+	rel='stylesheet'>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -19,34 +21,37 @@
 <body>
 	<div class="sidebar">
 		<div class="logo-details">
-			<i class='bx bxl-c-plus-plus'></i> 
-			<span class="logo_name">PASS App</span>
+			<i class='bx bx-plus-medical'></i> <span class="logo_name">PASS
+				App</span>
 		</div>
 		<ul class="nav-links">
-			<li><a th:href="@{/receptionist}" class="active"> <i class='bx bx-grid-alt'></i>
+			<li><a th:href="@{/receptionist}"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
-				</a></li>
-			<li><a th:href="@{/receptionist/deleteAppointment}"> <i class='bx bx-box'></i> <span
-						class="links_name">Delete </span>
-				</a></li>
-			<li><a th:href="@{/receptionist/updateAppointment}"> <i class='bx bx-list-ul'></i> <span
-						class="links_name">Reschedule </span>
-				</a></li>
-			<li><a th:href="@{/receptionist/receptionistPrintReceipt}"> <i class='bx bx-pie-chart-alt-2'></i> <span class="links_name"> Print
-						Receipt</span>
-				</a></li>
-			<li><a th:href="@{/receptionist/updateSpecialization}"> <i class='bx bx-coin-stack'></i> <span
-						class="links_name">Specialization</span>
-				</a></li>
-			<li><a th:href="@{/receptionist/patientPrescription}"> <i class='bx bx-book-alt'></i> <span
-						class="links_name">Prescriptions</span>
-				</a></li>
-			<li><a href="@{/receptionist/appointmentPerDoctor}"> <i class='bx bx-cog'></i> <span
-						class="links_name">AppointmentperDoctor</span>
-				</a></li>
-			<li class="log_out"><a onclick="logout()"> <i class='bx bx-log-out'></i> <span class="links_name">Log
-						out</span>
-				</a></li>
+			</a></li>
+			<li><a th:href="@{/receptionist/deleteAppointment}"
+				class="active"> <i class='bx bx-box'></i> <span
+					class="links_name">Delete </span>
+			</a></li>
+			<li><a th:href="@{/receptionist/updateAppointment}"> <i
+					class='bx bx-list-ul'></i> <span class="links_name">Reschedule
+				</span>
+			</a></li>
+			<li><a th:href="@{/receptionist/receptionistPrintReceipt}">
+					<i class='bx bx-pie-chart-alt-2'></i> <span class="links_name">
+						Print Receipt</span>
+			</a></li>
+			<li><a th:href="@{/receptionist/updateSpecialization}"> <i
+					class='bx bx-coin-stack'></i> <span class="links_name">Specialization</span>
+			</a></li>
+			<li><a th:href="@{/receptionist/patientPrescription}"> <i
+					class='bx bx-book-alt'></i> <span class="links_name">Prescriptions</span>
+			</a></li>
+			<li><a th:href="@{/receptionist/appointmentPerDoctor}"> <i
+					class='bx bx-cog'></i> <span class="links_name">AppointmentperDoctor</span>
+			</a></li>
+			<li class="log_out"><a onclick="logout()"> <i
+					class='bx bx-log-out'></i> <span class="links_name">Log out</span>
+			</a></li>
 		</ul>
 	</div>
 	<section class="home-section">
@@ -56,8 +61,9 @@
 					Appointment</span>
 			</div>
 			<div class="profile-details">
-				<img src="../images/profile.jpg" alt=""> <span class="admin_name">Receptionist</span>
-				<i class='bx bx-chevron-down'></i>
+				<img src="../images/profile.jpg" alt=""> <span
+					class="admin_name">Receptionist</span> <i
+					class='bx bx-chevron-down'></i>
 			</div>
 		</nav>
 
@@ -103,7 +109,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
