--- a/src/main/resources/templates/appointmentPerDoctor.html
+++ b/src/main/resources/templates/appointmentPerDoctor.html
@@ -59,8 +59,8 @@
 				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Dashboard</span>
 			</div>
 			<div class="profile-details">
-				<img src="images/profile.jpg" alt=""> <span class="admin_name">Prem
-					Shahi</span> <i class='bx bx-chevron-down'></i>
+				<img src="images/profile.jpg" alt=""> <span class="admin_name"></span>
+				<i class='bx bx-chevron-down'></i>
 			</div>
 		</nav>
 
@@ -72,39 +72,24 @@
 					<div class="sales-details">
 						<ul class="details">
 							<li class="topic">Date</li>
-							<li><a href="#">02 Jan 2021</a></li>
-							<li><a href="#">02 Jan 2021</a></li>
-							<li><a href="#">02 Jan 2021</a></li>
-							<li><a href="#">02 Jan 2021</a></li>
-							<li><a href="#">02 Jan 2021</a></li>
-							<li><a href="#">02 Jan 2021</a></li>
-							<li><a href="#">02 Jan 2021</a></li>
-							<li><a href="#">02 Jan 2021</a></li>
-							<li><a href="#">02 Jan 2021</a></li>
+							<li th:each="ap: ${appointments}"><a
+								th:text="${ap.appointmentTime}" href="#"></a></li>
 						</ul>
 						<ul class="details">
 							<li class="topic">Doctor Name</li>
-							<li><a href="#">Alex Doe</a></li>
-							<li><a href="#">David Mart</a></li>
-							<li><a href="#">Roe Parter</a></li>
-							<li><a href="#">Diana Penty</a></li>
-							<li><a href="#">Martin Paw</a></li>
-							<li><a href="#">Doe Alex</a></li>
-							<li><a href="#">Aiana Lexa</a></li>
-							<li><a href="#">Rexel Mags</a></li>
-							<li><a href="#">Tiana Loths</a></li>
+							<li th:each="ap: ${appointments}"><a
+								th:text="${ap.doctor.name}" href="#"></a></li>
 						</ul>
 						<ul class="details">
-							<li class="topic">Number of Patient Visited</li>
-							<li><a href="#">6</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">9</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">1</a></li>
-							<li><a href="#">5</a></li>
-							<li><a href="#">0</a></li>
-							<li><a href="#">1</a></li>
-							<li><a href="#">3</a></li>
+							<li class="topic">Problem</li>
+							<li th:each="ap: ${appointments}"><a
+								th:text="${ap.problem}" href="#"></a></li>
+						</ul>
+						
+												<ul class="details">
+							<li class="topic">Status</li>
+							<li th:each="ap: ${appointments}"><a
+								th:text="${ap.status}" href="#"></a></li>
 						</ul>
 
 					</div>
@@ -112,7 +97,7 @@
 						<a href="#">See All</a>
 					</div>
 				</div>
-				<div class="top-sales box">
+				<!-- 				<div class="top-sales box">
 					<div class="title">Doctor Available</div>
 					<ul class="top-sales-details">
 						<li th:each="doc: ${doctors}"><a href="#"> <span
@@ -124,7 +109,7 @@
 								<label class="form-check-label" for="flexSwitchCheckChecked"></label>
 							</div></li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
