--- a/src/main/resources/templates/receptionistDashboard.html
+++ b/src/main/resources/templates/receptionistDashboard.html
@@ -90,14 +90,6 @@
 					</div>
 
 				</div>
-				<!-- <div class="box">
-					<div class="right-side">
-						<div class="box-topic">Fees Pending</div>
-						<div class="number">11,086</div>
-						<div class="indicator"></div>
-					</div>
-
-				</div> -->
 			</div>
 
 			<div class="sales-boxes">
@@ -107,7 +99,7 @@
 						<ul class="details">
 							<li class="topic">Date</li>
 							<li th:each="ap: ${appointments}"><a
-								th:text="${ap.appointmentTime}" href="#"></a></li>
+								th:text="${ap.appointmentTime}"></a></li>
 						</ul>
 						<ul class="details">
 							<li class="topic">Patient's Name</li>
@@ -116,8 +108,17 @@
 						</ul>
 						<ul class="details">
 							<li class="topic">Status</li>
-							<li th:each="ap: ${appointments}"><a th:text="${ap.status}"
-								href="#"></a></li>
+							<li th:each="ap: ${appointments}"><select
+								th:onchange="'javascript:onUpdateAppStatus(' + ${ap.appointmentId} + ');'"
+								class="form-select" id="appStatus">
+									<option selected>Select status</option>
+									<option th:selected="(${ap.status} == 'Pending')"
+										value="Pending">Pending</option>
+									<option th:selected="(${ap.status} == 'Confirmed')"
+										value="Confirmed">Confirmed</option>
+									<option th:selected="(${ap.status} == 'Completed')"
+										value="Completed">Completed</option>
+							</select></li>
 						</ul>
 						<ul class="details">
 							<li class="topic">Fees</li>
