--- a/src/main/resources/templates/updateAppointment.html
+++ b/src/main/resources/templates/updateAppointment.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" href="../static/patientDash.css"
 	th:href="@{/patientDash.css}">
-<!-- <link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}"> -->
 <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
 	rel='stylesheet'>
 <link
@@ -15,16 +15,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- <link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
 
-<link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}"> -->
-
-<title>Appointment Update Form</title>
+<title>Specialization Update Form</title>
 </head>
+
 <body>
 	<div class="sidebar">
 		<div class="logo-details">
@@ -32,22 +26,23 @@
 				App</span>
 		</div>
 		<ul class="nav-links">
-			<li><a th:href="@{/receptionist}"> <i
-					class='bx bx-grid-alt'></i> <span class="links_name">Dashboard</span>
+			<li><a th:href="@{/receptionist}"> <i class='bx bx-grid-alt'></i>
+					<span class="links_name">Dashboard</span>
 			</a></li>
 			<li><a th:href="@{/receptionist/deleteAppointment}"> <i
 					class='bx bx-box'></i> <span class="links_name">Delete </span>
 			</a></li>
-			<li><a th:href="@{/receptionist/updateAppointment}"
-				class="active"> <i class='bx bx-list-ul'></i> <span
-					class="links_name">Reschedule</span>
+			<li><a th:href="@{/receptionist/updateAppointment}"> <i
+					class='bx bx-list-ul'></i> <span class="links_name">Reschedule
+				</span>
 			</a></li>
 			<li><a th:href="@{/receptionist/receptionistPrintReceipt}">
 					<i class='bx bx-pie-chart-alt-2'></i> <span class="links_name">
 						Print Receipt</span>
 			</a></li>
-			<li><a th:href="@{/receptionist/updateSpecialization}"> <i
-					class='bx bx-coin-stack'></i> <span class="links_name">Specialization</span>
+			<li><a th:href="@{/receptionist/updateSpecialization}"
+				class="active"> <i class='bx bx-coin-stack'></i> <span
+					class="links_name">Specialization</span>
 			</a></li>
 			<li><a th:href="@{/receptionist/patientPrescription}"> <i
 					class='bx bx-book-alt'></i> <span class="links_name">Prescriptions</span>
@@ -74,19 +69,19 @@
 			<div class="overview-boxes">
 				<div class="signup-form">
 					<form name="form2" action="javascript:void(0)"
-						onsubmit="onPatRegister()">
-						<h2>Appointment Update</h2>
-						<p>Please fill in this form to update an appointment!</p>
+						onsubmit="onAppointmentUpdate()">
+						<h2>Reschedule Appointment</h2>
+						<p>Please fill in this form to Reschedule an appointment..!</p>
 						<hr>
-						<label style="color: black">Appointment Id</label><br>
+						<label for="docName" style="color: black">Select
+							Appoiintment Id to update</label><br>
 						<div class="form-group">
-							<div>
-								<input type="number" class="form-control" id="appointmentId"
-									name="problemappointmentId" placeholder="ApointmentId"
-									required="required">
-								<div id="validationServer03Feedback" class="invalid-feedback">
-									Please provide a valid AppointmentID</div>
-							</div>
+							<select required="required" onchange="onAppChange()"
+								class="form-control" name="appId" id="appId">
+								<option value="">Select Appointment</option>
+								<option th:each="a : ${appointments}"
+									th:value="${a.appointmentId}" th:text="${a.appointmentId}"></option>
+							</select>
 						</div>
 						<label for="docName" style="color: black">Doctors's Name</label><br>
 						<div class="form-group">
@@ -108,10 +103,16 @@
 							</div>
 						</div>
 
-						<label style="color: black">Date Of Appointment</label><br>
+						<input type="text" style="display: none;" disabled
+							class="form-control" name="userId" id="userId" required>
+
+						<input type="date" style="display: none;" disabled
+							class="form-control" name="appCreatedDate" id="appCreatedDate"
+							required> <label style="color: black">Date Of
+							Appointment</label><br>
 						<div class="form-group">
 							<div>
-								<input type="date" class="form-control" name="dob">
+								<input type="date" class="form-control" id="datOfApp">
 							</div>
 						</div>
 
@@ -137,13 +138,13 @@
 						<label style="color: black">Date Of Birth</label><br>
 						<div class="form-group">
 							<div>
-								<input type="date" class="form-control" name="dob">
+								<input type="date" class="form-control" id="dob">
 							</div>
 						</div>
 
 						<div class="form-group">
-							<label style="color: black">Doctor's Gender</label><br> <select
-								class="form-control" id="docGender">
+							<label style="color: black">Patient's Gender</label><br> <select
+								class="form-control" id="patGender">
 								<option value="male">Male</option>
 								<option value="female">Female</option>
 								<option value="other">Other</option>
@@ -151,14 +152,66 @@
 						</div>
 
 						<div class="form-group">
-							<button type="submit" class="btn btn-primary btn-lg">Update
-								Appointment</button>
+							<button type="submit" class="btn btn-primary btn-lg">Update</button>
 						</div>
 					</form>
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<script>
+		function onAppChange() {
+			var appId = document.getElementById("appId").value;
+
+			fetch("http://localhost:8080/appointment/appointments/" + appId)
+					.then(function(response) {
+						return response.json();
+					})
+					.then(
+							function(data) {
+								if (data.status) {
+									document
+											.getElementById("docSpecialization").value = data.data.doctor.specialization;
+									document.getElementById("docName").value = data.data.doctor.doctorId;
+									document.getElementById("userId").value = data.data.user.userId;
+									document.getElementById("appCreatedDate").valueAsDate = new Date(
+											data.data.createdDate);
+									document.getElementById("datOfApp").valueAsDate = new Date(
+											data.data.appointmentTime);
+									document.getElementById("patName").value = data.data.patientName;
+									document.getElementById("problem").value = data.data.problem;
+									document.getElementById("patGender").value = data.data.patientGender;
+									document.getElementById("dob").valueAsDate = new Date(
+											data.data.patientDOB);
+								}
+							});
+
+			var docSpecialization = document
+					.getElementById("docSpecialization");
+			docSpecialization.value = docName.specialization;
+		}
+
+		function onDocChange() {
+			var docId = document.getElementById("docName").value;
+
+			fetch("http://localhost:8080/doctor/getDoctor/" + docId)
+					.then(function(response) {
+						return response.json();
+					})
+					.then(
+							function(data) {
+								if (data.status) {
+									document
+											.getElementById("docSpecialization").value = data.data.specialization;
+								}
+							});
+
+			var docSpecialization = document
+					.getElementById("docSpecialization");
+			docSpecialization.value = docName.specialization;
+		}
+	</script>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
