--- a/src/main/resources/templates/updateSpecialization.html
+++ b/src/main/resources/templates/updateSpecialization.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" href="../static/patientDash.css"
 	th:href="@{/patientDash.css}">
-<!-- <link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}"> -->
 <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
 	rel='stylesheet'>
 <link
@@ -15,16 +15,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- <link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
-
-<link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}"> -->
 
 <title>Specialization Update Form</title>
 </head>
+
 <body>
 	<div class="sidebar">
 		<div class="logo-details">
@@ -75,11 +69,21 @@
 			<div class="overview-boxes">
 				<div class="signup-form">
 					<form name="form2" action="javascript:void(0)"
-						onsubmit="onPatRegister()">
-						<h2>Specialization Updation</h2>
+						onsubmit="onAppointmentUpdate()">
+						<h2>Update to Specialized Doctor</h2>
 						<p>Please fill in this form to book an appointment for
 							specialized doctor !</p>
 						<hr>
+						<label for="docName" style="color: black">Select
+							Appoiintment Id to update</label><br>
+						<div class="form-group">
+							<select required="required" onchange="onAppChange()"
+								class="form-control" name="appId" id="appId">
+								<option value="">Select Appointment</option>
+								<option th:each="a : ${appointments}"
+									th:value="${a.appointmentId}" th:text="${a.appointmentId}"></option>
+							</select>
+						</div>
 						<label for="docName" style="color: black">Doctors's Name</label><br>
 						<div class="form-group">
 							<select required="required" onchange="onDocChange()"
@@ -100,10 +104,16 @@
 							</div>
 						</div>
 
-						<label style="color: black">Date Of Appointment</label><br>
+						<input type="text" style="display: none;" disabled
+							class="form-control" name="userId" id="userId" required>
+
+						<input type="date" style="display: none;" disabled
+							class="form-control" name="appCreatedDate" id="appCreatedDate"
+							required> <label style="color: black">Date Of
+							Appointment</label><br>
 						<div class="form-group">
 							<div>
-								<input type="date" class="form-control" name="dob">
+								<input type="date" class="form-control" id="datOfApp">
 							</div>
 						</div>
 
@@ -129,13 +139,13 @@
 						<label style="color: black">Date Of Birth</label><br>
 						<div class="form-group">
 							<div>
-								<input type="date" class="form-control" name="dob">
+								<input type="date" class="form-control" id="dob">
 							</div>
 						</div>
 
 						<div class="form-group">
-							<label style="color: black">Doctor's Gender</label><br> <select
-								class="form-control" id="docGender">
+							<label style="color: black">Patient's Gender</label><br> <select
+								class="form-control" id="patGender">
 								<option value="male">Male</option>
 								<option value="female">Female</option>
 								<option value="other">Other</option>
@@ -150,6 +160,59 @@
 			</div>
 		</div>
 	</section>
+
+	<script>
+		function onAppChange() {
+			var appId = document.getElementById("appId").value;
+
+			fetch("http://localhost:8080/appointment/appointments/" + appId)
+					.then(function(response) {
+						return response.json();
+					})
+					.then(
+							function(data) {
+								if (data.status) {
+									document
+											.getElementById("docSpecialization").value = data.data.doctor.specialization;
+									document.getElementById("docName").value = data.data.doctor.doctorId;
+									document.getElementById("userId").value = data.data.user.userId;
+									document.getElementById("appCreatedDate").valueAsDate = new Date(
+											data.data.createdDate);
+									document.getElementById("datOfApp").valueAsDate = new Date(
+											data.data.appointmentTime);
+									document.getElementById("patName").value = data.data.patientName;
+									document.getElementById("problem").value = data.data.problem;
+									document.getElementById("patGender").value = data.data.patientGender;
+									document.getElementById("dob").valueAsDate = new Date(
+											data.data.patientDOB);
+								}
+							});
+
+			var docSpecialization = document
+					.getElementById("docSpecialization");
+			docSpecialization.value = docName.specialization;
+		}
+
+		function onDocChange() {
+			var docId = document.getElementById("docName").value;
+
+			fetch("http://localhost:8080/doctor/getDoctor/" + docId)
+					.then(function(response) {
+						return response.json();
+					})
+					.then(
+							function(data) {
+								if (data.status) {
+									document
+											.getElementById("docSpecialization").value = data.data.specialization;
+								}
+							});
+
+			var docSpecialization = document
+					.getElementById("docSpecialization");
+			docSpecialization.value = docName.specialization;
+		}
+	</script>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
