--- a/src/main/resources/templates/appointmentPerDoctor.html
+++ b/src/main/resources/templates/appointmentPerDoctor.html
@@ -82,14 +82,14 @@
 						</ul>
 						<ul class="details">
 							<li class="topic">Problem</li>
-							<li th:each="ap: ${appointments}"><a
-								th:text="${ap.problem}" href="#"></a></li>
+							<li th:each="ap: ${appointments}"><a th:text="${ap.problem}"
+								href="#"></a></li>
 						</ul>
-						
-												<ul class="details">
+
+						<ul class="details">
 							<li class="topic">Status</li>
-							<li th:each="ap: ${appointments}"><a
-								th:text="${ap.status}" href="#"></a></li>
+							<li th:each="ap: ${appointments}"><a th:text="${ap.status}"
+								href="#"></a></li>
 						</ul>
 
 					</div>
