--- a/src/main/resources/templates/adminRegistration.html
+++ b/src/main/resources/templates/adminRegistration.html
@@ -2,33 +2,41 @@
 <html lang="en" dir="ltr">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Responsiive Admin Dashboard | CodingLab</title>
-	<link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}">
-	<link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}">
-	<link rel="stylesheet" href="../static/fontawesome" th:href="@{/fontawesome}">
-	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<meta charset="UTF-8">
+<title>Responsiive Admin Dashboard | CodingLab</title>
+<link rel="stylesheet" href="../static/style2.css"
+	th:href="@{/style2.css}">
+<link rel="stylesheet" href="../static/style.css"
+	th:href="@{/style.css}">
+<link rel="stylesheet" href="../static/fontawesome"
+	th:href="@{/fontawesome}">
+<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'
+	rel='stylesheet'>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+	crossorigin="anonymous">
 
 
-	<script src="https://kit.fontawesome.com/b496fc4e58.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/b496fc4e58.js"
+	crossorigin="anonymous"></script>
 
-	<style>
-		.home-content .overview-boxes {
-			justify-content: flex-start;
-			gap: 24px;
-		}
+<style>
+.home-content .overview-boxes {
+	justify-content: flex-start;
+	gap: 24px;
+}
 
-		.home-content .sales-boxes .recent-sales {
-			width: 50%;
-		}
+.home-content .sales-boxes .recent-sales {
+	width: 50%;
+}
 
-		.home-content .sales-boxes .top-sales {
-			width: 50%;
-		}
-	</style>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+.home-content .sales-boxes .top-sales {
+	width: 50%;
+}
+</style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
@@ -39,13 +47,15 @@
 				APP</span>
 		</div>
 		<ul class="nav-links">
-			<li><a th:href="@{/admin}"> <i class='bx bx-grid-alt'></i> <span class="links_name">Dashboard</span>
-				</a></li>
-			<li><a href="#" class="active"> <i class='bx bx-box'></i> <span class="links_name">Registration</span>
-				</a></li>
-			<li class="log_out"><a onclick="logout()"> <i class='bx bx-log-out'></i> <span class="links_name">Log
-						out</span>
-				</a></li>
+			<li><a th:href="@{/admin}"> <i class='bx bx-grid-alt'></i> <span
+					class="links_name">Dashboard</span>
+			</a></li>
+			<li><a href="#" class="active"> <i class='bx bx-box'></i> <span
+					class="links_name">Registration</span>
+			</a></li>
+			<li class="log_out"><a onclick="logout()"> <i
+					class='bx bx-log-out'></i> <span class="links_name">Log out</span>
+			</a></li>
 		</ul>
 	</div>
 	<section class="home-section">
@@ -54,7 +64,8 @@
 				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Registration</span>
 			</div>
 			<div class="profile-details">
-				<img src="/images/profile.jpg" alt=""> <span class="admin_name">Admin</span> <i></i>
+				<img src="/images/profile.jpg" alt=""> <span
+					class="admin_name">Admin</span> <i></i>
 			</div>
 		</nav>
 
@@ -62,30 +73,31 @@
 			<div class="sales-boxes">
 				<div class="recent-sales box">
 					<div class="sales-details">
-						<form class="form" name="form1" action="javascript:void(0)" onsubmit="onRegister()">
+						<form class="form" name="form1" action="javascript:void(0)"
+							onsubmit="onRegister()">
 							<h2>Doctor's Registration</h2>
 							<p>Please fill in this form to create an account!</p>
 							<hr>
 							<label style="color: black">Name</label><br>
 							<div class="form-group">
 								<div>
-									<input type="text" class="form-control" id="docName" name="name" placeholder="Name"
-										required="required">
+									<input type="text" class="form-control" id="docName"
+										name="name" placeholder="Name" required="required">
 									<div id="validationServer03Feedback" class="invalid-feedback">
 										Please provide a valid Name.</div>
 								</div>
 							</div>
 							<br> <label style="color: black">Email</label><br>
 							<div class="form-group">
-								<input type="email" class="form-control" id="docEmail" name="email" placeholder="Email"
-									required="required">
+								<input type="email" class="form-control" id="docEmail"
+									name="email" placeholder="Email" required="required">
 								<div id="validationServer03Feedback" class="invalid-feedback">
 									Please provide a valid Email.</div>
 							</div>
 							<br> <label style="color: black">Password</label><br>
 							<div class="form-group">
-								<input type="password" class="form-control" id="docPass" name="password"
-									placeholder="Password" required="required">
+								<input type="password" class="form-control" id="docPass"
+									name="password" placeholder="Password" required="required">
 								<div id="validationServer03Feedback" class="invalid-feedback">
 									Password must contain at least one lowercase letter, one
 									uppercase letter, one numeric digit, and one special character</div>
@@ -100,7 +112,8 @@
 							<br> <label style="color: black">Is Specialist</label><br>
 							<div class="form-group">
 								<div>
-									<select class="form-control" name="Specialist" id="IsASpecialist">
+									<select class="form-control" name="Specialist"
+										id="IsASpecialist">
 										<option value="true">Yes</option>
 										<option value="false">No</option>
 									</select>
@@ -109,7 +122,8 @@
 							<br> <label style="color: black">Specialization</label><br>
 							<div class="form-group">
 								<div>
-									<select class="form-control" name="specialization" id="docSpecialization">
+									<select class="form-control" name="specialization"
+										id="docSpecialization">
 										<option value="Anesthesiologists">Anesthesiologists</option>
 										<option value="Cardiologists">Cardiologists</option>
 										<option value="Neurologists">Neurologists</option>
@@ -130,8 +144,8 @@
 							<br> <label style="color: black">Experience</label><br>
 							<div class="form-group">
 								<div>
-									<input type="text" class="form-control" id="docExp" name="experience"
-										placeholder="Experience" required="required">
+									<input type="text" class="form-control" id="docExp"
+										name="experience" placeholder="Experience" required="required">
 									<div id="validationServer03Feedback" class="invalid-feedback">
 										Please provide only Numeric Value.</div>
 								</div>
@@ -139,8 +153,8 @@
 							<br> <label style="color: black">Fees</label><br>
 							<div class="form-group">
 								<div>
-									<input type="text" class="form-control" id="docFees" name="fees" placeholder="Fees"
-										required="required">
+									<input type="text" class="form-control" id="docFees"
+										name="fees" placeholder="Fees" required="required">
 									<div id="validationServer03Feedback" class="invalid-feedback">
 										Please provide only Numeric Value.</div>
 								</div>
@@ -165,30 +179,31 @@
 					</div>
 				</div>
 				<div class="top-sales box">
-					<form name="form1" action="javascript:void(0)" onsubmit="onRecepRegister()">
+					<form name="form1" action="javascript:void(0)"
+						onsubmit="onRecepRegister()">
 						<h2>Receptionist Registration</h2>
 						<p>Please fill in this form to create an account!</p>
 						<hr>
 						<label style="color: black">Name</label><br>
 						<div class="form-group">
 							<div>
-								<input type="text" class="form-control" id="recepName" name="name" placeholder="Name"
-									required="required">
+								<input type="text" class="form-control" id="recepName"
+									name="name" placeholder="Name" required="required">
 								<div id="validationServer03Feedback" class="invalid-feedback">
 									Please provide a valid Name.</div>
 							</div>
 						</div>
 						<br> <label style="color: black">Email</label><br>
 						<div class="form-group">
-							<input type="email" class="form-control" id="recepEmail" name="email" placeholder="Email"
-								required="required">
+							<input type="email" class="form-control" id="recepEmail"
+								name="email" placeholder="Email" required="required">
 							<div id="validationServer03Feedback" class="invalid-feedback">
 								Please provide a valid Email.</div>
 						</div>
 						<br> <label style="color: black">Password</label><br>
 						<div class="form-group">
-							<input type="password" class="form-control" id="recepPassword" name="password"
-								placeholder="Password" required="required">
+							<input type="password" class="form-control" id="recepPassword"
+								name="password" placeholder="Password" required="required">
 							<div id="validationServer03Feedback" class="invalid-feedback">
 								Password must contain at least one lowercase letter, one
 								uppercase letter, one numeric digit, and one special character</div>
@@ -223,14 +238,16 @@
 		</div>
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="../static/mainjs.js" th:src="@{/mainjs.js}">
-
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+		crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../static/mainjs.js"
+		th:src="@{/mainjs.js}">
+		
 	</script>
 	<script>
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
-		sidebarBtn.onclick = function () {
+		sidebarBtn.onclick = function() {
 			sidebar.classList.toggle("active");
 			if (sidebar.classList.contains("active")) {
 				sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
@@ -238,7 +255,8 @@
 				sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
 		}
 	</script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 
